[project]
name = "nexlog-backend"
version = "0.1.0"
description = "A blog system backend made with Python and FastAPI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
]

[tool.fastapi]
entrypoint = "main:app"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
